# taiwan-government-news-scraper

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PERFORMANCE.md  PROJECT_REPORT.md  README.md  SECURITY.md  SOURCES.md  build_entry.py  news-scraper.spec  pyproject.toml  requirements-build.in  requirements-build.lock.txt  requirements-dev.in  requirements-dev.lock.txt  requirements-security.in  requirements-security.lock.txt  requirements.in  requirements.lock.txt  requirements.txt
.github/: release.yml
.github/workflows/: build-release.yml  release-live-smoke.yml  source-smoke.yml  test.yml
benchmarks/: baseline.json
docs/: DEMO.md  DISASTER_RECOVERY.md  MAINTENANCE.md  PORTABLE_README.txt  RELEASING.md  UAT.md  uat-results-template.csv
docs/adr/: 0001-thread-pool-and-retry-policy.md
news_scraper/: __init__.py  __main__.py  ai_policy_evaluation.py  application.py  bundled_scrapers.py  config.py  errors.py  excel_exporter.py  external_schemas.py  gui.py  io_utils.py  main.py  models.py  monitoring.py  observability.py  paths.py  policy.py  policy.toml  quality.py  run_lock.py  runtime.py  runtime_config.py  scheduler.py  source_catalog.py
news_scraper/http/: __init__.py  async_client.py  client.py
news_scraper/rss/: __init__.py  parser.py
news_scraper/scrapers/: __init__.py  base.py  registry.py
news_scraper/scrapers/ministry/: __init__.py
news_scraper/scrapers/ministry/agriculture/: __init__.py  afa.py  afna.py  aphia.py  ardswc.py  atp.py  fa.py  moa.py
news_scraper/scrapers/ministry/communities/: __init__.py  cip.py  hakka.py
news_scraper/scrapers/ministry/culture/: __init__.py  moc.py  npm.py
news_scraper/scrapers/ministry/defense/: __init__.py  indsr.py  mnd.py  ncsist.py
news_scraper/scrapers/ministry/development/: __init__.py  ndc.py  niar.py  nstc.py  tasa.py
news_scraper/scrapers/ministry/digital/: __init__.py  moda.py
news_scraper/scrapers/ministry/economy/: __init__.py  moea.py
news_scraper/scrapers/ministry/education/: __init__.py  moe.py  naer.py  sports.py
news_scraper/scrapers/ministry/environment/: __init__.py  moenv.py
news_scraper/scrapers/ministry/executive/: __init__.py  dgpa.py  ey.py
news_scraper/scrapers/ministry/finance/: __init__.py  cbc.py  dgbas.py  fsc.py  ftc.py  mof.py
news_scraper/scrapers/ministry/foreign/: __init__.py  mac.py  mofa.py  ocac.py
news_scraper/scrapers/ministry/health/: __init__.py  cdc.py  fda.py  hpa.py  mohw.py  sfaa.py
news_scraper/scrapers/ministry/interior/: __init__.py  moi.py  nfa.py  nlma.py  nlsc.py  npa.py  nps.py
news_scraper/scrapers/ministry/judicial/: __init__.py  judicial_yuan.py
news_scraper/scrapers/ministry/justice/: __init__.py  mjac.py  moj.py  tps.py
news_scraper/scrapers/ministry/labor/: __init__.py  blf.py  mol.py  osha.py  wda.py
news_scraper/scrapers/ministry/oceans/: __init__.py  cga.py  fleet.py  investigation.py  oac.py
news_scraper/scrapers/ministry/oversight/: __init__.py  cy.py
news_scraper/scrapers/ministry/regulators/: __init__.py  cec.py  ncc.py  pcc.py
news_scraper/scrapers/ministry/sports/: __init__.py  sports.py
news_scraper/scrapers/ministry/transport/: __init__.py  cwa.py  freeway.py  motc.py  motcmpb.py  thb.py  tourism.py
news_scraper/scrapers/ministry/veterans/: __init__.py  vac.py  vghtpe.py
news_scraper/utils/: __init__.py  dates.py  dedupe.py  text.py
scripts/: benchmark_capacity.py  check_benchmark_budget.py  check_coverage.py  check_release_size.py  check_workflows.py  evaluate_ai_policy.py  package_release.py  record_long_term_run.py  smoke_sources.py
tests/: test_ai_policy.py  test_ai_policy_evaluation.py  test_application_runtime.py  test_coverage_gate.py  test_dates.py  test_dedupe.py  test_dgpa.py  test_digital.py  test_errors.py  test_excel_exporter.py  test_external_schemas_and_observability.py  test_fault_injection.py  test_fsc.py  test_http_client.py  test_integration_pipeline.py  test_main.py  test_monitoring.py  test_niar.py  test_parser_fixtures.py  test_policy.py  test_properties.py  test_quality.py  test_registry.py  test_rss_order_and_dates.py  test_runtime.py  test_scheduler.py  test_smoke_sources.py  test_tasa.py  test_vghtpe.py
tests/fixtures/: ai_policy_holdout_20260622.tsv  ai_policy_labeled_titles.tsv  cdc_list.html  judicial_list.html  motc_list.html  niar_list.html  nlma_list.html  sample_rss.xml  tasa_graphql.json  vghtpe_home.html  vghtpe_list.html
