[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-scraper"
version = "0.3.0"
description = "Taiwan government news weekly scraper"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "feedparser",
    "lxml",
    "openpyxl",
    "pandas",
    "requests",
    "selenium",
    "tomli>=2; python_version < '3.11'",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19,<2",
    "hypothesis>=6.155.2,<7",
    "pytest>=9,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.15,<1",
    "types-requests>=2.33,<3",
]

[project.scripts]
news-scraper = "news_scraper.main:main"

[tool.setuptools.packages.find]
include = ["news_scraper*"]

[tool.setuptools.package-data]
news_scraper = ["policy.toml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "venv", "news_scraper/venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"news_scraper/**/__init__.py" = ["F401", "F403"]
"news_scraper/scrapers/ministry/education/sports.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
files = [
    "news_scraper/models.py",
    "news_scraper/errors.py",
    "news_scraper/main.py",
    "news_scraper/monitoring.py",
    "news_scraper/policy.py",
    "news_scraper/quality.py",
    "news_scraper/http",
    "news_scraper/rss",
    "news_scraper/runtime.py",
    "news_scraper/scheduler.py",
    "news_scraper/source_catalog.py",
    "news_scraper/scrapers/registry.py",
]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
