[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-scraper"
version = "1.2.1"
description = "Taiwan government news weekly scraper"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4",
    "defusedxml>=0.7.1",
    "feedparser",
    "idna>=3.15",
    "lxml",
    "numpy==2.2.6",
    "openpyxl",
    "pandas>=2.3.3,<2.3.4",
    "requests",
    "selenium",
    "soupsieve>=2.8.4",
    "tomli>=2; python_version < '3.11'",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19,<2",
    "hypothesis>=6.155.2,<7",
    "pytest>=9,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.15.17,<1",
    "types-requests>=2.33,<3",
]

[project.scripts]
news-scraper = "news_scraper.main:main"
news-scraper-gui = "news_scraper.gui:main"

[tool.setuptools.packages.find]
include = ["news_scraper*"]

[tool.setuptools.package-data]
news_scraper = ["policy.toml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "venv", "news_scraper/venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"news_scraper/**/__init__.py" = ["F401", "F403"]
"news_scraper/scrapers/ministry/education/sports.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
files = [
    "news_scraper/config.py",
    "news_scraper/ai_policy_evaluation.py",
    "news_scraper/excel_exporter.py",
    "news_scraper/gui.py",
    "news_scraper/models.py",
    "news_scraper/errors.py",
    "news_scraper/main.py",
    "news_scraper/application.py",
    "news_scraper/io_utils.py",
    "news_scraper/monitoring.py",
    "news_scraper/paths.py",
    "news_scraper/policy.py",
    "news_scraper/quality.py",
    "news_scraper/run_lock.py",
    "news_scraper/http",
    "news_scraper/rss",
    "news_scraper/runtime.py",
    "news_scraper/scheduler.py",
    "news_scraper/source_catalog.py",
    "news_scraper/scrapers/registry.py",
    "news_scraper/scrapers/ministry/executive/dgpa.py",
    "news_scraper/utils/dates.py",
    "news_scraper/utils/text.py",
]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
